--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     .docsify-copy-code-button{
       font-size: 6px!important;
     }
-    .page_toc{
+    /* .page_toc{
       top: 100px;
-    }
+    } */
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css"> -->
 </head>
 <body>
   <div id="app"></div>
@@ -45,11 +45,11 @@
         noData: '找不到结果',
         depth: 3
       },
-      toc: {
-        scope: '.markdown-section',
-        headings: 'h2, h3',
-        title: '目录',
-      },
+      // toc: {
+      //   scope: '.markdown-section',
+      //   headings: 'h2, h3',
+      //   title: '目录',
+      // },
       pagination: {
         previousText: '上一篇',
         nextText: '下一篇',
@@ -80,7 +80,7 @@
   <!-- CDN files for docsify-katex -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>  
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
+  <!-- <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
 
 </body>
